alacritty: Use Input Mono patched with nerd fonts

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -8,16 +8,16 @@ window:
 font:
   size: 11.0
   normal:
-    family: InputMono
+    family: InputMono Nerd Font
     style: Regular
   bold:
-    family: InputMono
+    family: InputMono Nerd Font
     style: Bold
   italic:
-    family: InputMono
+    family: InputMono Nerd Font
     style: Italic
   bold_italic:
-    family: InputMono
+    family: InputMono Nerd Font
     style: Bold Italic
   offset:
     x: 0
