--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -163,7 +163,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders both
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -759,3 +759,4 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+default_linemode devicons
