--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,28 @@
+# Fix Colors
 set -g default-terminal "screen-256color"
 set -as terminal-features ",xterm-256color:RGB"
+
+# Scrolling
+setw -g mouse on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Renumber windows
+set-option -g renumber-windows on
+
+# Statusline Colors
+set -g status-style bg=terminal,fg=terminal
+
+# Statusline location
+set -g status-position bottom
+
+# Current window name bold
+set -g window-status-current-style fg=terminal,bold
+
+# Time settings
+set -g status-right "%I:%M %p, %d-%b-%y, %a"
+
+# Increase left length
+set -g status-left-length 20
