--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -30,41 +30,107 @@ font:
 
 draw_bold_text_with_bright_colors: true
 
-colors:
-  primary:
-    background: '#0F111A'
-    foreground: '#A6ACCD'
-  search:
-    matches:
-      foreground: '#000000'
-      background: '#ffffff'
-    focused_match:
-      foreground: CellBackground
+schemes:
+  dark_blue_terminal: &dark_blue_terminal
+    primary:
+      background: '#010422'
+      foreground: '#2BABBA'
+    search:
+      matches:
+        foreground: '#000000'
+        background: '#ffffff'
+      focused_match:
+        foreground: CellBackground
+        background: CellForeground
+    selection:
+      text: CellBackground
       background: CellForeground
-  selection:
-    text: CellBackground
-    background: CellForeground
+    normal:
+      black:   '#000000'
+      red:     '#AA0000'
+      green:   '#00AA00'
+      yellow:  '#AA5500'
+      blue:    '#0000AA'
+      magenta: '#AA00AA'
+      cyan:    '#00AAAA'
+      white:   '#AAAAAA'
+    bright:
+      black:   '#555555'
+      red:     '#FF5555'
+      green:   '#55FF55'
+      yellow:  '#FFFF55'
+      blue:    '#5555FF'
+      magenta: '#FF55FF'
+      cyan:    '#55FFFF'
+      white:   '#FFFFFF'
 
-  # Normal colors
-  normal:
-    black:   '#000000'
-    red:     '#B02730'
-    green:   '#7BA63A'
-    yellow:  '#BA831C'
-    blue:    '#1D5BD7'
-    magenta: '#AC00E6'
-    cyan:    '#239DCD'
-    white:   '#AAAAAA'
-  # Bright colors
-  bright:
-    black:   '#555555'
-    red:     '#D33641'
-    green:   '#95C251'
-    yellow:  '#DFA02A'
-    blue:    '#4379E5'
-    magenta: '#C61AFF'
-    cyan:    '#43B3DF'
-    white:   '#EEFFFF'
+  gruvbox_material_hard_dark: &gruvbox_material_hard_dark
+    primary:
+      background: '0x1d2021'
+      foreground: '0xd4be98'
+    search:
+      matches:
+        foreground: '#000000'
+        background: '#ffffff'
+      focused_match:
+        foreground: CellBackground
+        background: CellForeground
+    selection:
+      text: CellBackground
+      background: CellForeground
+    normal:
+      black:   '0x32302f'
+      red:     '0xea6962'
+      green:   '0xa9b665'
+      yellow:  '0xd8a657'
+      blue:    '0x7daea3'
+      magenta: '0xd3869b'
+      cyan:    '0x89b482'
+      white:   '0xd4be98'
+    bright:
+      black:   '0x32302f'
+      red:     '0xea6962'
+      green:   '0xa9b665'
+      yellow:  '0xd8a657'
+      blue:    '0x7daea3'
+      magenta: '0xd3869b'
+      cyan:    '0x89b482'
+      white:   '0xd4be98'
+
+  material_ocean_dark: &material_ocean_dark
+    primary:
+      background: '#0F111A'
+      foreground: '#A6ACCD'
+    search:
+      matches:
+        foreground: '#000000'
+        background: '#ffffff'
+      focused_match:
+        foreground: CellBackground
+        background: CellForeground
+    selection:
+      text: CellBackground
+      background: CellForeground
+    normal:
+      black:   '#000000'
+      red:     '#B02730'
+      green:   '#7BA63A'
+      yellow:  '#BA831C'
+      blue:    '#1D5BD7'
+      magenta: '#AC00E6'
+      cyan:    '#239DCD'
+      white:   '#AAAAAA'
+    bright:
+      black:   '#555555'
+      red:     '#D33641'
+      green:   '#95C251'
+      yellow:  '#DFA02A'
+      blue:    '#4379E5'
+      magenta: '#C61AFF'
+      cyan:    '#43B3DF'
+      white:   '#EEFFFF'
+
+colors: *gruvbox_material_hard_dark
 
 cursor:
   style:
